# run

./: .gitignore  CONTRIBUTE.md  Cargo.toml  README.md  Runfile copy.run  Runfile.run  TODO.md  flake.nix  include-sub.run  include.run  included command.run  included-subcommand.run  runfile  runfile copy.run  runfile.run  stress-subcommands.run  subcommands-stress.run
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 89rbjqdh39lj9vqvysfgphndblc85s4p-source  ckyn8ilhscjfj1ylhvg7vdhz5csq5dza-source  m707dys0ykz12vnyfljx62dc6lv0hmx7-source
.github/workflows/: release.yml
cli/: Cargo.toml  flake.nix  run
cli/src/: clap.rs  command.rs  error.rs  main.rs  nix.rs  parser.rs  runfile.rs  utils.rs
cli/src/fmt/: strlist.rs
cli/src/lang/: bash.rs  c.rs  cpp.rs  dart.rs  mod.rs  rust.rs  shell.rs
cli/src/parsing/: parser.rs
examples/: runfile.run
extension/: CHANGELOG.md  README.md  flake.nix  language-configuration.json  package.json  pnpm-lock.yaml  run  runfile  runfile-0.0.1.vsix  vsc-extension-quickstart.md
extension/syntaxes/: interpolation.json  run.tmLanguage.json
src/: clap.rs  command.rs  error.rs  main.rs  nix.rs  parser copy 2.rs  parser copy.rs  parser.rs  runfile.rs  runner.rs  strlist.rs  utils.rs
src/fmt/: mod.rs  strlist.rs
src/lang/: bash.rs  c.rs  cpp.rs  csharp.rs  javascript.rs  mod.rs  python.rs  rust.rs  shell.rs
src/parsing/: checkpoint.rs  error.rs  functions.rs  mod.rs  parser.rs  tests.rs
tests/stress/: run  stress-subcommands.run
