cargo-features = ["codegen-backend"]

[package]
name = "runfile"
description = "Run commands in the languages you love!"
version = "0.1.0"
edition = "2021"
authors = ["Liam Garriga <liam@garriga.dev>"]
repository = "https://github.com/lyonsyonii/run"
license = "GPL-3.0"

# https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "run"
path = "src/main.rs"

[dependencies]
peg = "0.8.2"                                                                   # Parser generator
ariadne = "0.4.0"                                                               # Better parser error reports
yansi = { version = "1.0.0-rc.1", features = ["detect-tty", "detect-env"] }     # Colorize output (no alloc)
aho-corasick = "1.1.2"                                                          # Fast string replace (used in variable replacement)
beef = { version = "0.5.2", features = ["const_fn"] }                           # Slimmer Cow<str>
read_pipe = "0.1.2"                                                             # Detect if runfile is being piped into
clap_complete = { version = "4.4.9" }                                           # Generate completions for CLI
clap = { version = "4.4.18", default-features = false, features = ["string"] }  # Needed for clap_complete
which = "6.0.0"                                                                 # Find executables in PATH
indexmap = { version = "2.2.2" }                                                # Keep order of commands as written in runfile
xxhash-rust = { version = "0.8.8", features = ["xxh3"] }                        # Faster hashing for hashmap
md5 = "0.7.0"                                                                   # Hash scripts for caching                           
app_dirs2 = "2.5.5"                                                             # Cross-platform app dirs for compilation cache
thiserror = "1.0.56"                                                            # Better error type creation

[profile.dev]
codegen-backend = "cranelift"

[profile.release]
opt-level = 3       # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
debug = false       # Disable debug symbols
