[package]
name = "runfile"
description = "Run commands in the languages you love!"
version = "0.1.1"
edition = "2021"
authors = ["Liam Garriga <liam@garriga.dev>"]
repository = "https://github.com/lyonsyonii/run"
license = "GPL-3.0"

# https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "run"
path = "src/main.rs"

[dependencies]
peg = "0.8.2"                                                                   # Parser generator
ariadne = "0.4.0"                                                               # Better parser error reports
yansi = { version = "1.0.1", features = ["detect-tty", "detect-env"] }     # Colorize output (no alloc)
aho-corasick = "1.1.2"                                                          # Fast string replace (used in variable replacement)
beef = { version = "0.5.2" }                                                    # Slimmer Cow<str>
read_pipe = "0.2.0"                                                             # Detect if runfile is being piped into
clap_complete = { version = "4.5.1" }                                          # Generate completions for CLI
clap = { version = "4.5.2", default-features = false, features = ["string"] }  # Needed for clap_complete
which = "6.0.0"                                                                 # Find executables in PATH
indexmap = { version = "2.2.5" }                                                # Keep order of commands as written in runfile
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }                        # Faster hashing for hashmap
md5 = "0.7.0"                                                                   # Hash scripts for caching                           
app_dirs2 = "2.5.5"                                                             # Cross-platform app dirs for compilation cache
thiserror = "1.0.58"                                                            # Better error type creation
enum_dispatch = "0.3.12"                                                        # Replace dynamic dispatch with enums
regex = "1.10.3"

[profile.dev]
debug = false
strip = true

[profile.release]
opt-level = 3       # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
debug = false       # Disable debug symbols

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
allow-dirty = ["ci"]
